--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -7,6 +7,7 @@
     <body>
         {{> header}}
         <p> {{welcomeMessage}}</p>
+        <p><a href="/weather-app">Weather App</a></p>
 
       {{> footer}}
     </body>
